updated REST openapi
